// Vitest Snapshot v1

exports[`Preferencia > exibe o conteúdo escondido ao clicar no botão respeitando o snapshot 1`] = `
"<div class=\\"flex justify-end\\">
  <div class=\\"inline-flex flex-col text-right\\">
    <div><button class=\\"transform-gpu opacity-50 transition duration-300 hover:opacity-100\\" dusk=\\"toggle\\"><svg class=\\"w-6 h-6\\" fill=\\"currentColor\\" viewBox=\\"0 0 16 16\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path d=\\"M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z\\"></path>
        </svg></button></div>
    <transition-stub enterfromclass=\\"opacity-0 scale-50\\" entertoclass=\\"opacity-100 scale-100\\" enteractiveclass=\\"transition duration-300 transform-gpu\\" leaveactiveclass=\\"transition duration-200 transform-gpu\\" leavefromclass=\\"opacity-100 scale-100\\" leavetoclass=\\"opacity-0 scale-50\\" appear=\\"false\\" persisted=\\"true\\" css=\\"true\\">
      <div class=\\"overflow-x-auto rounded-lg p-3 shadow-lg shadow-secundaria-500 dark:shadow-primaria-500\\" dusk=\\"preferencias\\" style=\\"\\">
        <div class=\\"inline-flex\\">
          <div class=\\"space-y-3\\">
            <div class=\\"grid grid-cols-1 gap-3 md:grid-cols-2\\" dusk=\\"slot\\">foo</div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Preferencia > renderiza o componente respeitando o snapshot 1`] = `
"<div class=\\"flex justify-end\\">
  <div class=\\"inline-flex flex-col text-right\\">
    <div><button class=\\"transform-gpu opacity-50 transition duration-300 hover:opacity-100\\" dusk=\\"toggle\\"><svg class=\\"w-6 h-6\\" fill=\\"currentColor\\" viewBox=\\"0 0 16 16\\" xmlns=\\"http://www.w3.org/2000/svg\\">
          <path d=\\"M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z\\"></path>
        </svg></button></div>
    <transition-stub enterfromclass=\\"opacity-0 scale-50\\" entertoclass=\\"opacity-100 scale-100\\" enteractiveclass=\\"transition duration-300 transform-gpu\\" leaveactiveclass=\\"transition duration-200 transform-gpu\\" leavefromclass=\\"opacity-100 scale-100\\" leavetoclass=\\"opacity-0 scale-50\\" appear=\\"false\\" persisted=\\"true\\" css=\\"true\\">
      <div class=\\"overflow-x-auto rounded-lg p-3 shadow-lg shadow-secundaria-500 dark:shadow-primaria-500\\" dusk=\\"preferencias\\" style=\\"display: none;\\">
        <div class=\\"inline-flex\\">
          <div class=\\"space-y-3\\">
            <div class=\\"grid grid-cols-1 gap-3 md:grid-cols-2\\" dusk=\\"slot\\">foo</div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
